Adding todays log. Added some filesystem handlers. Not quite ready yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ set(SOURCE_FILES
     src/constants.h
     src/log.h
     src/log.c
-    src/params.h)
+    src/params.h src/filesystem_handler.c src/filesystem_handler.h)
 
-add_executable(sfarro ${SOURCE_FILES} src/vfs.h)
+add_executable(sfarro ${SOURCE_FILES} src/vfs.h src/filesystem_handler.c src/filesystem_handler.h)
 
 target_include_directories(sfarro PRIVATE ${FUSE_INCLUDE_DIR})
 target_link_libraries(sfarro ${FUSE_LIBRARIES})
