--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,8 @@ set(SOURCE_FILES
     src/log.c
     src/params.h
 )
-#        src/filesystem_handler.c
-#        src/filesystem_handler.h)
 
-add_executable(sfarro ${SOURCE_FILES} src/vfs.h )#src/filesystem_handler.c src/filesystem_handler.h)
+add_executable(sfarro ${SOURCE_FILES})
 
 target_include_directories(sfarro PRIVATE ${FUSE_INCLUDE_DIR})
 target_link_libraries(sfarro ${FUSE_LIBRARIES})
