Added in testing frame work to sfarro and wrote unit tests for timer functionality. Did extensive restructuring to project in order to achieve above

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
-include_directories(../src/)
-
-add_executable(runTimerTests test_timer.cc ../src/timer.h)
-
-target_link_libraries(runTimerTests gtest gtest_main)
-target_link_libraries(runTimerTests ../src/timer.h)
+project(test)
+add_subdirectory(lib/gtest-1.7.0)
+add_subdirectory(basic_tests)
