Extensive refactoring of project. Currently finishing off test cases for remounting process

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(test)
+
+set(CMAKE_CXX_FLAGS "-D_FILE_OFFSET_BITS=64 -lulockmgr")
+
 add_subdirectory(lib/gtest-1.7.0)
 add_subdirectory(basic_tests)
