Fixing configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -1,13 +1,11 @@
 AC_INIT([sfarro], [0.0.1], [brendan.carroll.92@gmail.com])
-
-AC_CONFIG_MACRO_DIR([m4])
+LT_INIT
 
 AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_HEADERS([config.h])
 
 AC_PROG_CC
 AC_LANG(C)
-AC_PROG_LIBTOOL
 
 my_CPPFLAGS="-D_REENTRANT -D_FILE_OFFSET_BITS=64 -DFUSE_USE_VERSION=26"
 my_CFLAGS="$my_CFLAGS -Wall"
@@ -19,5 +17,5 @@ AC_SUBST([my_LDFLAGS])
 
 PKG_CHECK_MODULES([fuse], [fuse >= 2.6.0])
 AC_CONFIG_FILES([Makefile \
-                 src/MakeFile])
+                 src/Makefile])
 AC_OUTPUT
