Did some formatting on a few source files. Fleshing out some tests

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ Makefile
 cmake_install.cmake
 install_manifest.txt
 
-/test/lib/gtest-1.7.0/msvc
-/test/basic_tests/runUnitTests
-/main
+### Makefile stuff
+m4/
+*.cache
+*/.deps
+
