--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_INIT([sfarro], [0.0.1], [brendan.carroll.92@gmail.com])
-LT_INIT
+#LT_INIT
 
 AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_HEADERS([config.h])
