Working on adding in read-only filesystem

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = sfarro
-noinst_HEADERS = constants.h monitor.h params.h remount.h timer.h vfs.h
-sfarro_SOURCES = sfarro.c remount.c timer.c monitor.c vfs.c
+noinst_HEADERS = constants.h monitor.h params.h remount.h timer.h vfs.h vfs_ro.h
+sfarro_SOURCES = sfarro.c remount.c timer.c monitor.c vfs.c vfs_ro.c 
 
 AM_CPPFLAGS = ${my_CPPFLAGS} ${fuse_CFLAGS}
 AM_CFLAGS = ${my_CFLAGS}
