Refactoring fuse into own thread

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = sfarro
-noinst_HEADERS = constants.h monitor.h params.h timer.h vfs.h
-sfarro_SOURCES = sfarro.c timer.c monitor.c vfs.c 
+noinst_HEADERS = constants.h monitor.h params.h timer.h vfs.h remount.h
+sfarro_SOURCES = sfarro.c timer.c monitor.c vfs.c remount.c 
 
 AM_CPPFLAGS = ${my_CPPFLAGS} ${fuse_CFLAGS}
 AM_CFLAGS = ${my_CFLAGS}
